# gmail-search-cli

./: .env.example  .gitignore  README.md  pyproject.toml
gmail_search/: __init__.py  gmail_search.py
