[project]
name = "gmail-search"
version = "0.1.0"
description = "A powerful Gmail search tool with smart caching and result management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pendulum>=3.0.0",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
]

[project.scripts]
gmail-search = "gmail_search:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gmail_search"]
